using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace Models.Enum
{
    public enum ToolState
    {
        Select,       // Modo padrão para selecionar e mover
        DrawingCable  // Modo para passar cabos
    }
}
