using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace Models
{
    public class Printer : NetworkDevice
    {
        public bool Termica { get; set; }
        public Printer()
        {
        }
    }
}
